# projektik

./: CMakeLists.txt  bot.cpp  bot.h  logic.c  logic.cpp  logic.h  piskvorky.c  piskvorky.cpp  piskvorky.h  player.h  visual.c  visual.cpp  visual.h
